overflown long vertical images fix

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -221,13 +221,14 @@ h3.project-title{
     padding-bottom: 15px;
     margin-bottom: 15px;
     padding-top:15px;
+}
+.project-image-container {
     overflow:hidden;
 }
-
-.col-sm-6.col-md-6.project-col {
+.col-sm-6.col-md-6.project-col .project-image-container {
     max-height: 381px;
 }
-.col-sm-6.col-md-4.project-col {
+.col-sm-6.col-md-4.project-col .project-image-container{
     max-height: 273px;
 }
 
